--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport"content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/reset.css">
-    <title>이동진이달의책</title>
+    <title>발렌타인데이프로모션</title>
 </head>
 <body>
     <div>
